CHANGELOG

== May 6, 2012
* Upgraded to Twitter Bootstrap 2.0
* Added Logo
* Login Model Box

== May 5, 2012
* Updated TinyMCE live editor
* ruby1.9 syntax updates

== May 4, 2012
* Caching Sidebar and Header for 2 hours
* Converted hash syntax to ruby1.9
* Global Caching Time increased from 1 to 2 hours
* Improved true/false fields with html ticker and cross
* Improved Suspicious/Spam Comments on dashboard
* Added Red color to Spam Comments
* Added Orange color to Suspicious Comments
* Mark comments suspicious based on a few bad keywords

== May 2, 2012
* Jobs History now in Descending order (latest first) [resque-history].
* Clear History button in jobs history [resque-history].
* Improved Roles Authorization code.
* Added Rspec tests for Admin Authorization.
* Added 'ref' to email links.

== Apr 29, 2012
* Added Opensearch.xml (to search in Chrome url bar)
* [OpenSearch 1.1 Draft 5] with rss, atom, and pagination
* Greatly improved performance of Search and Indexes
* Added eager loading joins to SQL search
* Added RSS/Atom support for search
* Upgraded Carrierwave to 0.6.2 
* Upgraded other gems

== Apr 27, 2012
* Improved Comments email
* Improved the Roles Permissions for admin pages
* Changed TinyMCE Editor to html5 mode (fix character encoding)
* Emails now should be better formatted

== Apr 26, 2012
* Rspec and Factory_Girl updated to latest
* Updated all rspec tests for new versions of gem
* Added Image Uploading specs for carrierwave
* Adjusted Youtube image size to be 100px wide max

== Apr 25, 2012
* Fix for Double submitting button on forms
* Added Upgrade/Dowgrade option for Users/AdminUsers 
* Roles are only apliable to Admin Users
* Allow to create users/adminUsers on admin interface
* Added email alert for new Comments /admin/comment_subscriptions
* Added youtube image to email if it's a video
* Youtube image bug fix on Highlights
* Added a few Rspec tests
* other various fixes and improvements
* Updated Gems

== Apr 24, 2012